# AutowareArchitectureProposal.iv

sensing/preprocessor/pointcloud/pointcloud_preprocessor/: CMakeLists.txt  package.xml
sensing/preprocessor/pointcloud/pointcloud_preprocessor/include/pointcloud_preprocessor/: filter.hpp
sensing/preprocessor/pointcloud/pointcloud_preprocessor/include/pointcloud_preprocessor/crop_box_filter/: crop_box_filter_nodelet.hpp
sensing/preprocessor/pointcloud/pointcloud_preprocessor/src/: filter.cpp
sensing/preprocessor/pointcloud/pointcloud_preprocessor/src/crop_box_filter/: crop_box_filter_nodelet.cpp
